--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     font-family: 'Raleway', sans-serif;
     font-size: 14px;
     color: #6c7279;
+    -webkit-font-smoothing: antialiased;
 }
 
 *,
@@ -11,17 +12,153 @@ body {
 *:after {
     box-sizing: border-box;
 }
-/*container
-===========*/
-.container{
-width: 100%;
-max-width: 1170px;
-margin: 0 auto;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
 }
 
-/*header
+p {
+    margin: 0 0 10px;
+}
+
+/*Container
+===========*/
+.container {
+    width: 100%;
+    max-width: 1170px;
+    margin: 0 auto;
+}
+
+/*Header
 ===========*/
 
-.header{
+.header {
+    width: 100%;
 
+    height: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
+
+.header__inner {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #515369;
+    padding: 35px 0;
+
+    align-items: center;
+
+}
+
+/*Nav
+===========*/
+
+.nav {
+    font-size: 13px;
+    font-weight: 700;
+    display: flex;
+}
+
+.nav__link {
+    opacity: 0.75;
+    color: #ffffff;
+    font-family: Raleway;
+
+    text-transform: uppercase;
+    text-decoration: none;
+
+    transition: opacity .2s linear;
+
+    margin-left: 50px;
+}
+
+.nav__link:first-child {
+    margin-left: 0;
+}
+
+.nav__link:hover {
+    text-decoration: underline;
+    opacity: 1;
+}
+
+/*Intro
+===========*/
+
+.intro {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 750px;
+
+    background: #31344e url('img/header/header-bcg.jpg') center no-repeat / cover;
+    padding-top: 100px;
+
+}
+
+.intro__inner {
+    width: 100%;
+    max-width: 970px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.intro__title {
+    margin: 0;
+    color: #ffffff;
+    font-family: "Open Sans";
+    font-size: 65px;
+    font-weight: 700;
+    line-height: 71px;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 30px;
+
+
+}
+
+.intro__subtitle {
+    color: #ffffff;
+    font-family: Raleway;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 33px;
+    margin-bottom: 60px;
+}
+
+
+/*Button
+===========*/
+
+.btn {
+    display: inline-block;
+    vertical-align: top;
+    text-decoration: none;
+    border-radius: 3px;
+    color: #ffffff;
+    font-family: "Raleway - Semi Bold";
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 21px;
+    text-transform: uppercase;
+    padding: 14px 40px;
+    cursor: pointer;
+    font-family: inherit;
+    border: 0;
+    transition: background .2s linear;
+}
+
+.btn--red {
+    background-color: #e84545;
+}
+
+.btn--red:hover {
+    background-color: #dd3434;
 }
