--- a/style.css
+++ b/style.css
@@ -162,3 +162,39 @@ p {
 .btn--red:hover {
     background-color: #dd3434;
 }
+
+.features {
+    display: flex;
+    flex-wrap: wrap;
+
+    margin: 100px 0;
+}
+
+.features__item {
+    width: 33.3333%;
+    text-align: center;
+    padding: 0 40px;
+    margin: 25px 0;
+}
+
+.features__title {
+    color: #2d3033;
+    font-family: Raleway;
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+
+}
+
+.features__text {
+    color: #6c7279;
+    font-family: Raleway;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+}
+
+.features__icon {
+    margin-bottom: 20px;
+}
