--- a/style.css
+++ b/style.css
@@ -89,6 +89,46 @@ p {
     opacity: 1;
 }
 
+.burger{
+    padding: 15px 0;
+display: none;
+background: none;
+border: 0;
+cursor: pointer;
+}
+
+.burger:focus{
+    outline: none;
+}
+
+.burger__item {
+    display: block;
+    width: 30px;
+    height: 3px;
+    background-color: #fff;
+    
+    position: relative;
+}
+
+.burger__item:before,
+.burger__item:after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    position: absolute;
+    
+}
+
+.burger__item:before {
+    top: -8px;
+}
+
+.burger__item:after {
+    top: 8px;
+}
+
 /*Intro
 ===========*/
 
@@ -99,8 +139,9 @@ p {
     justify-content: center;
     height: 750px;
 
-    background: #31344e url('img/header/header-bcg.jpg') center no-repeat / cover;
+    background: #31344e url('img/header/header-bcg.jpg') center no-repeat;
     padding-top: 100px;
+    background-size: cover;
 
 }
 
@@ -480,4 +521,41 @@ p {
 
 .copyright__inner span {
     color: red;
+}
+
+.burger {
+    display: none;
+}
+
+@media(max-width:991px) {
+    .intro__title {
+        font-size: 40px;
+    }
+
+    .nav {
+        display: none;
+    }
+
+    .burger {
+        display: block;
+    }
+}
+
+@media(max-width:767px) {
+    .intro {
+        height: auto;
+        padding-top: 130px;
+        padding-bottom: 30px;
+    }
+
+    .intro__title {
+        font-size: 30px;
+
+
+    }
+
+    .intro__subtitle {
+        margin-bottom: 30px;
+        font-size: 16px;
+    }
 }
