--- a/style.css
+++ b/style.css
@@ -89,15 +89,15 @@ p {
     opacity: 1;
 }
 
-.burger{
+.burger {
     padding: 15px 0;
-display: none;
-background: none;
-border: 0;
-cursor: pointer;
+    display: none;
+    background: none;
+    border: 0;
+    cursor: pointer;
 }
 
-.burger:focus{
+.burger:focus {
     outline: none;
 }
 
@@ -106,7 +106,7 @@ cursor: pointer;
     width: 30px;
     height: 3px;
     background-color: #fff;
-    
+
     position: relative;
 }
 
@@ -118,7 +118,7 @@ cursor: pointer;
     height: 100%;
     background-color: #fff;
     position: absolute;
-    
+
 }
 
 .burger__item:before {
@@ -277,6 +277,7 @@ cursor: pointer;
     z-index: 1;
 
     transform: translate3d(-50%, -50%, 0);
+    min-width: 100%;
 }
 
 .works__content {
@@ -527,6 +528,13 @@ cursor: pointer;
     display: none;
 }
 
+
+@media(max-width:1300px) {
+    .works__item {
+        width: 50%;
+    }
+}
+
 @media(max-width:991px) {
     .intro__title {
         font-size: 40px;
@@ -539,6 +547,24 @@ cursor: pointer;
     .burger {
         display: block;
     }
+
+    .features__item {
+        width: 50%;
+
+    }
+
+    .team__personal__item {
+        width: 50%;
+        text-align: center;
+    }
+
+    .team__personal__img {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+
+
 }
 
 @media(max-width:767px) {
@@ -557,5 +583,28 @@ cursor: pointer;
     .intro__subtitle {
         margin-bottom: 30px;
         font-size: 16px;
+    }
+
+    .features {
+        margin: 40px 0;
+    }
+
+    .features__item {
+        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .works__item {
+        width: 100%;
+        height: 300px;
+    }
+
+    .team__personal__item {
+        width: 100%;
+    }
+
+    .team {
+        margin: 60px 0 30px;
     }
 }
