--- a/style.css
+++ b/style.css
@@ -554,7 +554,24 @@ p {
     }
 
     .nav {
+        flex-direction: column;
         display: none;
+        position: absolute;
+        right: 0;
+        top: 100%;
+
+        width: 100%;
+        text-align: right;
+        background-color: #31344e;
+    }
+
+    .nav.show {
+        display: flex;
+    }
+
+    .nav__link {
+        padding: 9px 15px;
+        ;
     }
 
     .burger {
